base/src/test/resources/failure/scope/ctor-scope.aya.txt
In file $FILE:4:11 ->

  2 |  | zero | suc Nat
  3 | def f (n : Nat) : Nat
  4 |  | zero => zero
                 ^--^
  
Error: The unqualified name referred to by `zero` is not defined in the current scope
Tycking interrupted due to error(s).
What are you doing?
